[gd_scene load_steps=10 format=3 uid="uid://7a5a5jmugkuh"]

[ext_resource type="FontFile" uid="uid://c5ugy4bgmo7mu" path="res://Font/ThaleahFat.ttf" id="1_1sqig"]
[ext_resource type="Script" path="res://Script/tao_yuan_jie_yi.gd" id="1_pbc3l"]
[ext_resource type="PackedScene" uid="uid://cku255ljrdcj3" path="res://Scences/timer.tscn" id="2_iaqea"]
[ext_resource type="PackedScene" uid="uid://bgs4ryqa52mgk" path="res://Scences/backbutton.tscn" id="3_xptsi"]
[ext_resource type="Texture2D" uid="uid://do7o33we678ym" path="res://Sprite/TaoYuanJieYi/04.png" id="4_5mp24"]
[ext_resource type="PackedScene" uid="uid://bpji8grjpjpiw" path="res://Scences/end_image.tscn" id="6_jbb7a"]
[ext_resource type="FontFile" uid="uid://chnee2hx5p4sm" path="res://Font/shanhaihongruibangshuw.ttf" id="7_n6xn5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gi2iu"]
atlas = ExtResource("4_5mp24")
region = Rect2(3, 67, 42, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_vll52"]
atlas = ExtResource("4_5mp24")
region = Rect2(55, 118, 34, 5)

[node name="Tao_Yuan_Jie_Yi" type="Node2D"]
script = ExtResource("1_pbc3l")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -22.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.89, 0.8544, 0.4628, 1)

[node name="TimerLabel" parent="UI" instance=ExtResource("2_iaqea")]
offset_left = 48.0
offset_top = 48.0
offset_right = 144.0
offset_bottom = 80.0

[node name="ColorRect2" type="ColorRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -350.0
offset_right = 250.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.745098, 0.768627, 1, 1)

[node name="GridContainer" type="GridContainer" parent="UI/ColorRect2"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 4
columns = 5

[node name="Backbutton" parent="UI" instance=ExtResource("3_xptsi")]
offset_left = 18.0
offset_top = 18.0
offset_right = 34.0
offset_bottom = 30.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI"]
texture_filter = 1
offset_left = 306.0
offset_top = 61.0
offset_right = 348.0
offset_bottom = 72.0
scale = Vector2(5, 5)
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 30.0
texture_under = SubResource("AtlasTexture_gi2iu")
texture_progress = SubResource("AtlasTexture_vll52")
texture_progress_offset = Vector2(4, 3)

[node name="Label" type="Label" parent="UI/TextureProgressBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(21, 8)
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="EndImage" parent="UI" instance=ExtResource("6_jbb7a")]

[node name="Label2" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 34.0
offset_top = 172.0
offset_right = 50.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_n6xn5")
theme_override_font_sizes/font_size = 32
text = "3"

[node name="Label" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 172.0
offset_right = 47.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_n6xn5")
theme_override_font_sizes/font_size = 32
text = "剩余步："

[node name="Numbers" type="CanvasLayer" parent="."]

[node name="1" type="ColorRect" parent="Numbers"]
offset_left = -992.0
offset_right = -896.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.541176, 1, 0.490196, 1)

[node name="Button" type="Button" parent="Numbers/1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "1"

[node name="2" type="ColorRect" parent="Numbers"]
offset_left = -896.0
offset_right = -800.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.976471, 0.823529, 0.898039, 1)

[node name="Button" type="Button" parent="Numbers/2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "2"

[node name="3" type="ColorRect" parent="Numbers"]
offset_left = -800.0
offset_right = -704.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.345098, 0.980392, 0.968627, 1)

[node name="Button" type="Button" parent="Numbers/3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "3"

[node name="4" type="ColorRect" parent="Numbers"]
offset_left = -704.0
offset_right = -608.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.980392, 0.321569, 0.639216, 1)

[node name="Button" type="Button" parent="Numbers/4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "4"

[node name="5" type="ColorRect" parent="Numbers"]
offset_left = -608.0
offset_right = -512.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.960784, 0.890196, 0, 1)

[node name="Button" type="Button" parent="Numbers/5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "5"

[node name="6" type="ColorRect" parent="Numbers"]
offset_left = -512.0
offset_right = -416.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.756863, 0.509804, 0.929412, 1)

[node name="Button" type="Button" parent="Numbers/6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "6"

[node name="7" type="ColorRect" parent="Numbers"]
offset_left = -416.0
offset_right = -320.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.14902, 0.419608, 1, 1)

[node name="Button" type="Button" parent="Numbers/7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "7"

[node name="8" type="ColorRect" parent="Numbers"]
offset_left = -320.0
offset_right = -224.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.921569, 0.27451, 0.392157, 1)

[node name="Button" type="Button" parent="Numbers/8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "8"

[node name="9" type="ColorRect" parent="Numbers"]
offset_left = -224.0
offset_right = -128.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 0.615686, 0.490196, 1)

[node name="Button" type="Button" parent="Numbers/9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_1sqig")
theme_override_font_sizes/font_size = 96
text = "9"

[connection signal="pressed" from="UI/EndImage/Lose/TextureButton" to="." method="on_losing_pressed"]
[connection signal="pressed" from="UI/EndImage/Lose/TextureButton" to="UI/EndImage" method="_on_lose_button_pressed"]
[connection signal="pressed" from="UI/EndImage/Win/TextureButton" to="UI/EndImage" method="_on_win_button_pressed"]

[editable path="UI/EndImage"]
